--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="150dp"
-              android:layout_height="150dp"
-              android:layout_margin="20dp"
-              android:background="@color/colorAccent">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_margin="5dp">
+
+    <ImageView
+            android:id="@+id/grid_item_view_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
 
     <TextView
             android:id="@+id/grid_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
+            android:layout_marginStart="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/grid_item_author"
+            android:background="#ffffff"
             tools:text="title"/>
 
     <TextView
             android:id="@+id/grid_item_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
+            android:layout_marginStart="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="#ffffff"
             tools:text="author"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
