add progress bar

--- a/app/src/main/res/layout/activity_reddit_grid_view.xml
+++ b/app/src/main/res/layout/activity_reddit_grid_view.xml
@@ -21,12 +21,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/grid_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context=".RedditGridActivity">
+    <include layout="@layout/content_reddit_grid_view"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
