--- a/app/src/main/res/layout/content_reddit_detailed.xml
+++ b/app/src/main/res/layout/content_reddit_detailed.xml
@@ -34,9 +34,12 @@
 
         <TextView
                 android:id="@+id/reddit_detail_title_text"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="30dp"
                 tools:text="Title"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="100dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reddit_detail_image_view"/>
 
@@ -44,6 +47,8 @@
                 android:id="@+id/reddit_detail_author_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 tools:text="Author"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reddit_detail_title_text"/>
@@ -52,7 +57,10 @@
                 android:id="@+id/reddit_detail_content_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:text="Content"
+                android:textSize="25dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reddit_detail_author_text"/>
 
@@ -60,6 +68,8 @@
                 android:id="@+id/reddit_detail_body_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:text="body"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reddit_detail_content_text"/>
