--- a/app/src/main/res/layout/content_reddit_grid_view.xml
+++ b/app/src/main/res/layout/content_reddit_grid_view.xml
@@ -7,14 +7,14 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_reddit_grid_view"
-        tools:context="com.example.reddit.RedditGridActivity">
+        tools:context="com.example.reddit.grid.RedditGridActivity">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/grid_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context=".RedditGridActivity">
+            tools:context=".grid.RedditGridActivity">
     </androidx.recyclerview.widget.RecyclerView>
 
     <ProgressBar
