--- a/app/src/main/res/layout/activity_reddit_detailed.xml
+++ b/app/src/main/res/layout/activity_reddit_detailed.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.reddit.RedditDetailedActivity">
+        tools:context="com.example.reddit.detail.RedditDetailedActivity">
 
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
