--- a/app/src/main/res/layout/content_reddit_detailed.xml
+++ b/app/src/main/res/layout/content_reddit_detailed.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_reddit_detailed"
         tools:context="com.example.reddit.detail.RedditDetailedActivity">
@@ -74,7 +75,7 @@
 
         <TextView
                 android:id="@+id/reddit_detail_body_text"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
